# beetroots-tuto

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devconstainer.json  devcontainer.json
beetroots_tuto/: synthetic_case_nn.py
data/: dataset_train_test.csv  observations.csv  sigma.csv
data/models/: README.md
data/synthetic_case/: README.md  input.yaml  observations.csv  observations.pkl  params_for_gaussian_only.csv  sigma.csv  sigma.pkl
notebooks/: 00_convert_to_pickle.ipynb  01_learn_emulator.ipynb
